Endpoint Usuarios Responsaveis com Restaurante, e ativacao/inativacao em massa